components/markdown/src/snapshots/markdown__markdown__tests__reordered_footnotes.snap
---
source: components/markdown/src/markdown.rs
expression: events
---
[
    Start(
        Paragraph,
    ),
    Text(
        Borrowed(
            "This text has two",
        ),
    ),
    Html(
        Boxed(
            "<sup class=\"footnote-reference\" id=\"fr-2-1\"><a href=\"#fn-2\">[1]</a></sup>",
        ),
    ),
    Text(
        Borrowed(
            " footnotes",
        ),
    ),
    Html(
        Boxed(
            "<sup class=\"footnote-reference\" id=\"fr-1-1\"><a href=\"#fn-1\">[2]</a></sup>",
        ),
    ),
    End(
        Paragraph,
    ),
    Html(
        Borrowed(
            "<hr><ol class=\"footnotes-list\">\n",
        ),
    ),
    Html(
        Boxed(
            "<li id=\"fn-2\">",
        ),
    ),
    Start(
        Paragraph,
    ),
    Text(
        Borrowed(
            "But they are",
        ),
    ),
    Html(
        Boxed(
            " <a href=\"#fr-2-1\">↩</a></p>\n",
        ),
    ),
    Html(
        Borrowed(
            "</li>\n",
        ),
    ),
    Html(
        Boxed(
            "<li id=\"fn-1\">",
        ),
    ),
    Start(
        Paragraph,
    ),
    Text(
        Borrowed(
            "not sorted.",
        ),
    ),
    Html(
        Boxed(
            " <a href=\"#fr-1-1\">↩</a></p>\n",
        ),
    ),
    Html(
        Borrowed(
            "</li>\n",
        ),
    ),
    Html(
        Borrowed(
            "</ol>\n",
        ),
    ),
]
