components/markdown/src/snapshots/markdown__markdown__tests__single_footnote.snap
---
source: components/markdown/src/markdown.rs
expression: rendered.body
---
<p>This text has a footnote<sup class="footnote-reference" id="fr-1-1"><a href="https://example.com/post/#fn-1">[1]</a></sup></p>
<section class="footnotes">
<ol class="footnotes-list">
<li id="fn-1">
<p>But it is meaningless. <a href="https://example.com/post/#fr-1-1">↩</a></p>
</li>
</ol>
</section>
